Bug 104081 - FILEOPEN: RTF: Incorrect padding in table
Summary: FILEOPEN: RTF: Incorrect padding in table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0 target:5.3.2
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Tables
  Show dependency treegraph
 
Reported: 2016-11-21 10:37 UTC by Xisco Faulí
Modified: 2017-10-05 22:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison (85.33 KB, image/png)
2016-11-21 11:12 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-11-21 10:37:05 UTC
1. Open attachment 56090 [details]
2. Check table's padding in page 1

Observed behaviour: it's bigger than it should be 
Reproduced in 

Version: 5.3.0.0.alpha1+
Build ID: 757a60d01dd152aadab2ba3c8224252481ce8a88
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; Layout
Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 1 Xisco Faulí 2016-11-21 10:42:47 UTC
Regression introduced in range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=384595f07528aa4323769c8825ea6efa94ea3c4c..6e7da281c22a62ae39799b2736885e54c388caf2&ofs=50

it looks like it was introduced by either:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-22 19:08:42 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-22 19:57:00 (GMT)
commit bb77fd64f9219f1b8f990f5041d81cfddd021213 (patch)
tree 6e26c29b4a6348c90da5ff83a961ecb217ba02fb
parent 357011b5baef0b9b0b966e84ea2494aa81845e45 (diff)
fdo#82006 RTF filter: import \sbauto and \saauto

or

author	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-22 11:34:06 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-22 15:36:33 (GMT)
commit 74249cb6f4f52b7c10ebaa92f943920f6f94aaf4 (patch)
tree e43e346a975b646720c0b2ec8e0d2a7829f930e2
parent f2f171a4dbec9e3adac7ff66c1417ced84cd0d8e (diff)
RTF import: fix handling of multiple \lfolevel control words

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2016-11-21 11:12:27 UTC
Created attachment 128916 [details]
comparison
Comment 3 Miklos Vajna 2016-11-22 14:18:22 UTC
Please only add the bisected keyword when the exact commit is known. Thanks! :-)
Comment 4 Xisco Faulí 2016-11-22 16:08:10 UTC
ouch, you're right, sorry for that.

Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-22 19:08:42 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-22 19:57:00 (GMT)
commit bb77fd64f9219f1b8f990f5041d81cfddd021213 (patch)
tree 6e26c29b4a6348c90da5ff83a961ecb217ba02fb
parent 357011b5baef0b9b0b966e84ea2494aa81845e45 (diff)
fdo#82006 RTF filter: import \sbauto and \saauto
Comment 5 Commit Notification 2017-02-21 11:41:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=291c9122b23ce7aa619e828b895b08dcd21bf025

tdf#104081 RTF import: handle \htmautsp

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-02-23 12:24:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af9d9f274ff26b462048746069a5bb38493ff115&h=libreoffice-5-3

tdf#104081 RTF import: handle \htmautsp

It will be available in 5.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 vihsa 2017-03-11 04:38:32 UTC
verified.
Version: 5.4.0.0.alpha0+ / Build ID: febc116 / ls-4001 / android 5.1

table padding on page 1  is similar to image file attachment.
Comment 8 Xisco Faulí 2017-03-12 16:09:52 UTC
Moving to VERIFIED FIXED as per comment 7