writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -601,7 +601,7 @@ public:
     SettingsTablePtr const & GetSettingsTable()
     {
         if( !m_pSettingsTable )
-            m_pSettingsTable.reset( new SettingsTable );
+            m_pSettingsTable.reset(new SettingsTable(m_rDMapper));
         return m_pSettingsTable;
     }
 
